'fixing html layout bugs'

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,4 @@
 /* Github: matt-oc */
-
 html {
   height: 100%;
   scroll-behavior: smooth;
@@ -12,7 +11,7 @@ body {
   position: relative;
 }
 
-h1,h2,h3 {
+h1, h2, h3 {
   text-align: center;
 }
 
@@ -26,7 +25,7 @@ h2 {
 }
 
 p {
-  font-size:1.2rem;
+  font-size: 1.2rem;
   text-align: center;
   max-width: 1500px;
   width: 70%;
@@ -43,7 +42,7 @@ p {
 }
 
 .white-content {
-    color: #ffffff;
+  color: #ffffff;
 }
 
 .url {
@@ -51,28 +50,28 @@ p {
 }
 
 .card-body {
-  color: #777777;;
+  color: #777777;
+  ;
 }
 
 /* Navigation */
-
 .navbar {
   z-index: 1000;
   top: 0;
   left: 0;
   position: fixed;
   width: 100%;
-  background-color: transparent!important;
+  background-color: transparent !important;
   height: 65px;
 }
 
 .navbar a {
-  color: white!important;
+  color: white !important;
 }
 
 .navbar-nav {
   width: 100%;
-justify-content: flex-end;
+  justify-content: flex-end;
 }
 
 .nav-item {
@@ -90,7 +89,7 @@ justify-content: flex-end;
 }
 
 .navbar-light .navbar-nav .nav-link.active {
-    background-color: magenta;
+  background-color: magenta;
 }
 
 .navbar-brand {
@@ -98,12 +97,12 @@ justify-content: flex-end;
 }
 
 .nav-white {
-  background-color: #ffffff!important;
-  color: #000000!important;
+  background-color: #ffffff !important;
+  color: #000000 !important;
   /* from https://www.cssmatic.com/box-shadow */
-  -webkit-box-shadow: 0px 10px 19px -8px rgba(162,170,199,1);
-  -moz-box-shadow: 0px 10px 19px -8px rgba(162,170,199,1);
-  box-shadow: 0px 10px 19px -8px rgba(162,170,199,1);
+  -webkit-box-shadow: 0px 10px 19px -8px rgba(162, 170, 199, 1);
+  -moz-box-shadow: 0px 10px 19px -8px rgba(162, 170, 199, 1);
+  box-shadow: 0px 10px 19px -8px rgba(162, 170, 199, 1);
 }
 
 .nav-white .nav-item:hover {
@@ -111,15 +110,15 @@ justify-content: flex-end;
 }
 
 .nav-white a {
-    color: #777777!important;
+  color: #777777 !important;
 }
 
 /* General Structure */
-
 .container-fluid {
   padding: 0;
   max-width: 100vw;
 }
+
 .section {
   margin: 0 0 0 0;
   padding: 100px 0 100px 0;
@@ -142,16 +141,15 @@ justify-content: flex-end;
   justify-content: center;
   display: flex;
 }
- /* Code adapted from the post: https://stackoverflow.com/questions/1418838/html-making-a-link-lead-to-the-anchor-centered-in-the-middle-of-the-page
- to ensure a suitable stopping position when clicking an anchor link */
 
+/* Code adapted from the post: https://stackoverflow.com/questions/1418838/html-making-a-link-lead-to-the-anchor-centered-in-the-middle-of-the-page
+ to ensure a suitable stopping position when clicking an anchor link */
 #about, #services, #faq, #media, #contact-us {
   position: absolute;
- transform: translateY(-14vh);
+  transform: translateY(-14vh);
 }
 
 /* Main banner carousel */
-
 .landing-screen {
   margin-top: -80px;
 }
@@ -180,7 +178,7 @@ justify-content: flex-end;
   display: block;
   width: 100%;
   height: 100vh;
-  background-color: rgba(39,98,206, 0.5);
+  background-color: rgba(39, 98, 206, 0.5);
   z-index: 3;
   min-height: 800px;
 }
@@ -188,7 +186,6 @@ justify-content: flex-end;
 .carousel-inner {
   height: 100vh;
   min-height: 800px;
-
 }
 
 .carousel-title {
@@ -203,9 +200,7 @@ justify-content: flex-end;
   font-size: 1.3rem;
 }
 
-
 /* About section */
-
 .circle-image {
   border-radius: 800px;
   box-shadow: 5px 5px 50px #727a74;
@@ -222,13 +217,12 @@ justify-content: flex-end;
 
 .about-clamp {
   max-width: 1500px;
-    justify-content: center;
-    margin: auto;
-    width: 80%;
+  justify-content: center;
+  margin: auto;
+  width: 80%;
 }
 
 /* What we do section */
-
 .services .row {
   justify-content: center;
 }
@@ -243,7 +237,6 @@ justify-content: flex-end;
 }
 
 /* Faq Section */
-
 .faq .row {
   justify-content: center;
 }
@@ -260,11 +253,10 @@ justify-content: flex-end;
 }
 
 .card .btn:hover {
-  color:#548DE2;
+  color: #548DE2;
 }
 
 /* Media Section */
-
 .media-image {
   width: 80%;
   margin: auto;
@@ -278,7 +270,7 @@ justify-content: flex-end;
   margin: 30px;
 }
 
-.modal-dialog{
+.modal-dialog {
   width: fit-content;
 }
 
@@ -286,10 +278,10 @@ justify-content: flex-end;
   display: none;
 }
 
-@media (min-width: 576px){
-.modal-dialog {
+@media (min-width: 576px) {
+  .modal-dialog {
     max-width: 100%;
-}
+  }
 }
 
 /* Inset box shadow idea from https://stackoverflow.com/questions/8452739/css-inset-borders */
@@ -299,7 +291,6 @@ justify-content: flex-end;
 }
 
 /* Contact us section */
-
 .map, .map-row {
   width: 100%;
   height: 500px;
@@ -372,7 +363,6 @@ justify-content: flex-end;
 }
 
 /* Footer */
-
 .footer {
   margin-top: -70px;
   margin-bottom: 20px;
@@ -395,19 +385,38 @@ justify-content: flex-end;
 }
 
 /* Animation of drone adapted from https://www.w3schools.com/css/css3_animations.asp */
-#flying-drone, #flying-drone2, #flying-drone3, #flying-drone4  {
+#flying-drone, #flying-drone2, #flying-drone3, #flying-drone4 {
   position: relative;
   z-index: 5;
   display: block;
   top: 100px;
-  animation-timing-function: cubic-bezier(0.1,0.7,0.5,0.1);
+  animation-timing-function: cubic-bezier(0.1, 0.7, 0.5, 0.1);
   animation: drone 20s infinite;
 }
 
 @keyframes drone {
-0% { left:-50px; top:100px;}
-25%  { left:200px; top:100px;}
-50%  { left:400px; top:200px;}
-75%  { left:800px; top:500px;}
-100% { left:0px; top:0px;}
+  0% {
+    left: -50px;
+    top: 100px;
+  }
+
+  25% {
+    left: 200px;
+    top: 100px;
+  }
+
+  50% {
+    left: 400px;
+    top: 200px;
+  }
+
+  75% {
+    left: 800px;
+    top: 500px;
+  }
+
+  100% {
+    left: 0px;
+    top: 0px;
+  }
 }
